fix overwriting bug
