# docs/swagger.json
@@ -2579,6 +2579,10 @@
                     "type": "integer",
                     "example": 0
                 },
+                "partially_successful_invoices": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "total_records": {
                     "type": "integer",
                     "example": 4
